# TicTacToeExample

./: .gitignore  CMakeLists.txt  README.md  TicTacToe.cpp  TicTacToe.h  TicTacToe.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: CMakeLists.txt
app/include/: boardwidget.h  mainwindow.h
app/src/: boardwidget.cpp  mainwindow.cpp
app/ui/: mainwindow.ui
cmake/: CPM.cmake
include/: mainwindow.h  tictactoe.h
src/: tictactoe.cpp
tictactoe/: CMakeLists.txt
tictactoe/include/tictactoe/: tictactoe  tictactoe.h
tictactoe/include/tictactoe/detail/: board.h  computer_player.h  player.h  point.h
tictactoe/src/: board.cpp  computer_player.cpp  tictactoe.cpp
tictactoe/tests/: board.cpp  computer_player.cpp
